[package]
name = "most-bridge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.11"
log = "0.4"
bcs = "0.1.6"
base64 = "0.22.1"
sui-types = { git = "https://github.com/MystenLabs/sui", package="sui-types", version = "0.1.0"}
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto",rev="55e7e568842939e01c8545a71d72e2402ad74538" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package="shared-crypto", version = "0.0.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10.8"
secp256k1 = "0.20.2"
serde =  { version = "1.0.203", features = ["derive"]  } 
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
serde_derive = "1.0.203"
futures = "0.3"
actix-settings = "0.7.1"
actix-cors = "0.7.0"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"

